From 1ce14c6 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, fix bug in the boolean interpretation of
when avgcov is to be applied or not

From 7970b83 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, make major updates to docstring to match
description of input and output correctly

From ba6b657 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
add keyword input visscaleinfo to scale the closure phase Fourier
transform by the visibility to get the result in units of the
visibility. Process visscaleinfo appropriately. Update member
function docstring accordingly

From 8e46be9 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, remove commented lines, and obsolete
keyword inputs cohax, incohax, and outmode. Docstring of member
function yet to be updated.

From 6dba85e (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, add input keywords autoinfo, xinfo to
provide options for auto-power and cross-power spectra. Docstring
of member function yet to be updated

From 1d5505c (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Add input keyword outmode in input to member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum. This
will allow the member function to return the full cross power
spectrum without averaging. Update member function docstring
accordingly

From 26dbdb0 (master):
=====================

In prisim/bispectrum_phase.py,

(*) Import reduce from functools module