@@ -1,3 +1,12 @@
+From da67b42 (closure-adv):
+==========================
+
+In prisim/bispectrum_phase.py,
+
+(*) In member function compute_power_spectrum() of class
+ClosurePhaseDelaySpectrum, fix bug in removal of entries in
+diagoffsets when avgcov is applied
+
 From 1ce14c6 (closure-adv):
 ==========================
 
